--- a/MasterPage.master
+++ b/MasterPage.master
@@ -13,9 +13,12 @@
 	<script src="<%=ResolveUrl("~/JS/html5-min.js")%>"></script>
     <link rel="shortcut icon" type="image/x-icon" href="<%=ResolveUrl("~/Imagens/nardys.ico")%>">
     <%--<link rel="stylesheet" href="<%=ResolveUrl("~/Style/main.css")%>">--%>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="<%=ResolveUrl("~/CSS/normalize.css")%>">
     <link rel="stylesheet" href="<%=ResolveUrl("~/CSS/main.css")%>">
     <link rel="stylesheet" href="<%=ResolveUrl("~/CSS/calendario.css")%>">
+    <link rel="stylesheet" href="<%=ResolveUrl("~/Assets/css/login.css")%>">
+    
     <script src="<%=ResolveUrl("~/JS/jquery-1.10.2.min.js")%>"></script>
     <script src="<%=ResolveUrl("~/JS/jquery.mask.js")%>"></script>
     <script src="<%=ResolveUrl("~/JS/modernizr-2.6.2.min.js")%>"></script>
