--- a/MasterPage.master
+++ b/MasterPage.master
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="<%=ResolveUrl("~/CSS/main.css")%>">
     <link rel="stylesheet" href="<%=ResolveUrl("~/CSS/calendario.css")%>">
     <link rel="stylesheet" href="<%=ResolveUrl("~/Assets/css/login.css")%>">
+
+    <link rel="stylesheet" href="<%=ResolveUrl("~/Assets/css/menu.css")%>">
     
     <script src="<%=ResolveUrl("~/JS/jquery-1.10.2.min.js")%>"></script>
     <script src="<%=ResolveUrl("~/JS/jquery.mask.js")%>"></script>
