--- a/Modulos/Modulos.master
+++ b/Modulos/Modulos.master
@@ -3,66 +3,104 @@
 <asp:Content ID="Content1" ContentPlaceHolderID="head" runat="Server">
 </asp:Content>
 <asp:Content ID="Content2" ContentPlaceHolderID="content" runat="Server">
-    <header>
+    <header style="display: none">
         <div id="header">
             <asp:Image runat="server" ID="Image1" CssClass="logo" Height="30" ImageUrl="~/Imagens/logo_nardys.png" ToolTip="Logo Nardy's" alt="Logo Nardy's" title="Logo Nardy's" />
             <label for="menu-togle" class="navbar-btn" title="Desabilitar/Habilitar Menu">
-                
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                
-           </label>
-           
+
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+
+            </label>
             <ul>
                 <li class="user" title="Nome do usuario">
-                    <asp:Literal runat="server" ID="ltlUser"></asp:Literal></li>
-                <li class="lk-change-pass" style="display: none"><a id="ln-change-pass" href="#bx-change-pass"><%=Resources.Textos.Trocar_senha %></a></li>
+                    <asp:Literal runat="server" ID="ltlUser"></asp:Literal>
+                </li>
+                <%--<li class="lk-change-pass" style="display: none"><a id="ln-change-pass" href="#bx-change-pass"><%=Resources.Textos.Trocar_senha %></a></li>--%>
                 <li class="logout">
-                    <asp:HyperLink ID="HyperLink3" runat="server" NavigateUrl="~/Default.aspx?l=1" ToolTip="Logout" alt="Logout" title="Logout"><%=Resources.Textos.Log_Out %></asp:HyperLink></li>
+                    <asp:HyperLink ID="HyperLink3" runat="server" NavigateUrl="~/Default.aspx?l=1" ToolTip="Logout" alt="Logout" title="Logout"><%=Resources.Textos.Log_Out %></asp:HyperLink>
+                </li>
             </ul>
         </div>
     </header>
 
-    <input id="menu-togle" type="checkbox" />
-    <nav class="menu" id="menu" title="Menu Principal">
-        <ul>
-            <%
-                List<string> objListaGrupos = new List<string>();
-                objListaGrupos = (from s in gobjSecoes where s.Habilitado == true select s.Grupo.ToString()).Distinct().ToList();
+
+    <%--<header>
+        <div>
+            <input type="checkbox" id="menu-left">
+            <label for="menu-left" class="menu-bt left"></label>
+            <div class="nav-menu left">
+                <div class="menu-scroll">
+                    <h5>início</h5>
+                    <a href="" class="mdi mdi-clipboard-text">Prestação de contas</a>
+                    <a href="" class="mdi mdi-receipt">Recibos/Acordos em Aberto<span>3</span></a>
+                    <a href="" class="mdi mdi-calendar-text active">Diário da Portaria</a>
+
+                    <h5>Portaria</h5>
+                    <a href="" class="mdi mdi-file-find">Consulta de Ocorrências</a>
+                    <a href="" class="mdi mdi-calendar-text">Diário da Portaria</a>
+
+                    <h5>Condômino</h5>
+                    <a href="" class="mdi mdi-cash-multiple">2ª via de Boleto</a>
+                    <a href="" class="mdi mdi-email-alert">Aviso de Entrega</a>
+                </div>
+            </div>
+        </div>
+    </header>--%>
+
+    <%--<input id="menu-togle" type="checkbox" style="display: none" />
+    <nav class="menu" id="menu" title="Menu Principal" style="display: none">
+        <ul>--%>
+
+    <header>
+        <div>
+            <input type="checkbox" id="menu-left">
+            <label for="menu-left" class="menu-bt left"></label>
+            <div class="nav-menu left">
+                <div class="menu-scroll">
+                    <ul>
+
+                        <%
+                            List<string> objListaGrupos = new List<string>();
+                            objListaGrupos = (from s in gobjSecoes where s.Habilitado == true select s.Grupo.ToString()).Distinct().ToList();
 
 
-                foreach (String strGrupo in objListaGrupos)
-                {
-                    List<Secao> objListSecoes = new List<Secao>();
-                    objListSecoes = (from s in gobjSecoes where s.Grupo == strGrupo select s).ToList();
-
-                    if (objListSecoes.Any())
-                    {
-                        if (objListSecoes.Count == 1 && objListSecoes[0].Grupo == objListSecoes[0].Nome)
-                        {
-                            Response.Write(string.Format("<li><a href='{0}' title='{1}'>{1}</a></li>", objListSecoes[0].Caminho, objListSecoes[0].Nome));
-                        }
-                        else
-                        {
-                            Response.Write(string.Format("<li><a href='#' title='{0}'><span>{0}</span></a><ul>", objListSecoes[0].Grupo));
-                            foreach (Secao objSecao in objListSecoes.Where(s => s.Habilitado == true))
+                            foreach (String strGrupo in objListaGrupos)
                             {
-                                if (System.IO.Path.GetExtension(objSecao.Caminho).Contains("aspx"))
-                                    Response.Write(string.Format("<li><a href='{0}' title='{1}'>{1}</a></li>", objSecao.Caminho, objSecao.Nome));
-                                else
-                                    Response.Write(string.Format("<li><a href='{0}' target='_blank' title='{1}'>{1}</a></li>", objSecao.Caminho, objSecao.Nome));
+                                List<Secao> objListSecoes = new List<Secao>();
+                                objListSecoes = (from s in gobjSecoes where s.Grupo == strGrupo select s).ToList();
 
+                                if (objListSecoes.Any())
+                                {
+                                    if (objListSecoes.Count == 1 && objListSecoes[0].Grupo == objListSecoes[0].Nome)
+                                    {
+                                        Response.Write(string.Format("<li><a href='{0}' title='{1}'>{1}</a></li>", objListSecoes[0].Caminho, objListSecoes[0].Nome));
+                                    }
+                                    else
+                                    {
+                                        Response.Write(string.Format("<li><a href='#'><span class='title-white'>{0}</span></a><ul>", objListSecoes[0].Grupo));
+                                        foreach (Secao objSecao in objListSecoes.Where(s => s.Habilitado == true))
+                                        {
+                                            if (System.IO.Path.GetExtension(objSecao.Caminho).Contains("aspx"))
+                                                Response.Write(string.Format("<li><a href='{0}' title='{1}'>{1}</a></li>", objSecao.Caminho, objSecao.Nome));
+                                            else
+                                                Response.Write(string.Format("<li><a href='{0}' target='_blank' title='{1}'>{1}</a></li>", objSecao.Caminho, objSecao.Nome));
+
+                                        }
+                                        Response.Write("</ul></li>");
+                                    }
+                                }
                             }
-                            Response.Write("</ul></li>");
-                        }
-                    }
-                }
-
-            %>
-        </ul>
-    </nav>
+                        %>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+    <%--</ul>
+    </nav> --%>
 
     <main class="conteudo" id="conteudo">
         <div id="content">
@@ -85,10 +123,12 @@
             <asp:View runat="server" ID="mtvViewsMensagemUsuario">
 
                 <div id="divModalMensagem" class="ModalMsg">
-                    
+
                     <h2>Nardy's informa:</h2>
-                    <p title="Mensagem"><asp:Literal ID="litMensagem" runat="server"></asp:Literal><p>
-                    <a href="javascript:void(0)" onclick="closeModal();" class="expresso-fechar-popup" title="Fechar Popup" alt="Fechar Popup" title="Fechar Popup">Fechar (X)</a>
+                    <p title="Mensagem">
+                        <asp:Literal ID="litMensagem" runat="server"></asp:Literal>
+                    <p>
+                        <a href="javascript:void(0)" onclick="closeModal();" class="expresso-fechar-popup" title="Fechar Popup" alt="Fechar Popup" title="Fechar Popup">Fechar (X)</a>
                 </div>
             </asp:View>
         </asp:MultiView>
